# jdiff

./: CMakeLists.txt  README.md
app/: jdiff.cpp
include/diff/: diff.hpp
include/hash/: rhash.hpp
include/io/: file_reader.hpp  file_writer.hpp
src/: diff.cpp  file_reader.cpp  file_writer.cpp  test_diff.cpp
